segundo commit esperando funcione desde habl-codig

--- a/proyectosWeb/base.html
+++ b/proyectosWeb/base.html
@@ -7,6 +7,6 @@
 <h1>encabezado</h1>
 <p>kpdfosjfios</p>
 <p><strong>kdjshdfjfh</strong></p>
-<p></p>
+<p>se agrego un commit que espera ser hecho desde hablemos de codigo</p>
 </body>
 </html>
