--- a/proyectosWeb/base.html
+++ b/proyectosWeb/base.html
@@ -9,5 +9,9 @@
 <p><strong>kdjshdfjfh</strong></p>
 <p>se agrego un commit que espera ser hecho desde hablemos de codigo</p>
 <h2>commit hecho desde la lap en la cuenta de adan-itsz</h2>
+<p>este texto deberá solo aparecer en la rama2
+
+xxxxxxxxxxx
+<p/>
 </body>
 </html>
