--- a/proyectosWeb/base.html
+++ b/proyectosWeb/base.html
@@ -11,7 +11,7 @@
 <h2>commit hecho desde la lap en la cuenta de adan-itsz</h2>
 <p>este texto deberá solo aparecer en la rama2
 
-xxxxxxxxxxx
+xxxxxxxxxxx actualizara rama2
 <p/>
 </body>
 </html>
