quite comentario molesto acerca de la rama dos

--- a/proyectosWeb/base.html
+++ b/proyectosWeb/base.html
@@ -9,10 +9,7 @@
 <p><strong>kdjshdfjfh</strong></p>
 <p>se agrego un commit que espera ser hecho desde hablemos de codigo</p>
 <h2>commit hecho desde la lap en la cuenta de adan-itsz</h2>
-<p>este texto deberá solo aparecer en la rama2
-
-xxxxxxxxxxx actualizara rama2
+<p>este texto esta en la rama master
 <p/>
 </body>
 </html>
-// esto solo debra mostrarse en segunda rama
